fixed image too big issue, fixed headers for widget pages

--- a/public/assignment/CSS/style.css
+++ b/public/assignment/CSS/style.css
@@ -24,3 +24,7 @@ p.navbar-text.pull-right {
 p.navbar-text.pull-left {
     margin-left: 15px;
 }
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
